Calculator finished reponsively and fully functionally only 1 issue remaining

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             Hostinq
             <i class="fa-solid fa-chevron-down text-[13px] ml-[10px]"></i>
           </a>
-          <a class="hover:text-[#752EE2]" href="#">
+          <a class="hover:text-[#752EE2]" href="calculator.html">
             Xidmətlər
             <i class="fa-solid fa-chevron-down text-[13px] ml-[10px]"></i>
           </a>
@@ -664,5 +664,6 @@
   <script src="works.js"></script>
   <script src="comment.js"></script>
   <script src="carusel.js"></script>
+  <script src="hideorshowdrop.js"></script>
 </body>
 </html>
