--- a/testing.html
+++ b/testing.html
@@ -18,6 +18,179 @@
 </head>
 
 <body>
+  <header>
+    <div class="all-navbar py-[10px] md:py-[24px] px-[28px] font-[650] fixed w-[100%] top-0 left-0 z-20 bg-white">
+      <nav class="flex items-center justify-between gap-[10px] text-[1rem]">
+        <a href="#"><img class="h-[35px]" src="Images/saytaz.svg" alt="Logo"></a>
+        <div class="navLinks hidden gap-[56px] lg:flex">
+          <a class="hover:text-[#752EE2] relative cursor-pointer" onclick="HideShow('VebDropItem')">
+            Veb sayt
+            <i class="fa-solid fa-chevron-down text-[13px] ml-[10px]"></i>
+            <div id="VebDropItem"
+              class="absolute hidden flex-col top-[45px] left-[-150px] w-[405px] max-h-[500px] overflow-auto gap-[24px] py-[24px] pl-[32px] pr-[16px] bg-white border rounded-[10px]">
+              <div class="flex justify-start items-center">
+                <img class="h-[52px] w-[52px] object-cover p-[12px] mr-[16px] bg-[#DBEAFE] rounded-[8px]"
+                  src="Images/DropdownImages/FirstDrop/website-program.svg" alt="dropImg">
+                <div>
+                  <p class="text-[#334155] text-[16px]">Saytların hazırlanması</p>
+                  <span class="text-[#64748B] text-[14px]">Veb saytların hazırlanması</span>
+                </div>
+              </div>
+              <div class="flex justify-start items-center">
+                <img class="h-[52px] w-[52px] object-cover p-[12px] mr-[16px] bg-[#DBEAFE] rounded-[8px]"
+                  src="Images/DropdownImages/FirstDrop/website-program.svg" alt="dropImg">
+                <div>
+                  <p class="text-[#334155] text-[16px]">Saytların hazırlanması</p>
+                  <span class="text-[#64748B] text-[14px]">Veb saytların hazırlanması</span>
+                </div>
+              </div>
+              <div class="flex justify-start items-center">
+                <img class="h-[52px] w-[52px] object-cover p-[12px] mr-[16px] bg-[#DBEAFE] rounded-[8px]"
+                  src="Images/DropdownImages/FirstDrop/website-program.svg" alt="dropImg">
+                <div>
+                  <p class="text-[#334155] text-[16px]">Saytların hazırlanması</p>
+                  <span class="text-[#64748B] text-[14px]">Veb saytların hazırlanması</span>
+                </div>
+              </div>
+              <div class="flex justify-start items-center">
+                <img class="h-[52px] w-[52px] object-cover p-[12px] mr-[16px] bg-[#DBEAFE] rounded-[8px]"
+                  src="Images/DropdownImages/FirstDrop/website-program.svg" alt="dropImg">
+                <div>
+                  <p class="text-[#334155] text-[16px]">Saytların hazırlanması</p>
+                  <span class="text-[#64748B] text-[14px]">Veb saytların hazırlanması</span>
+                </div>
+              </div>
+              <div class="flex justify-start items-center">
+                <img class="h-[52px] w-[52px] object-cover p-[12px] mr-[16px] bg-[#DBEAFE] rounded-[8px]"
+                  src="Images/DropdownImages/FirstDrop/website-program.svg" alt="dropImg">
+                <div>
+                  <p class="text-[#334155] text-[16px]">Saytların hazırlanması</p>
+                  <span class="text-[#64748B] text-[14px]">Veb saytların hazırlanması</span>
+                </div>
+              </div>
+              <div class="flex justify-start items-center">
+                <img class="h-[52px] w-[52px] object-cover p-[12px] mr-[16px] bg-[#DBEAFE] rounded-[8px]"
+                  src="Images/DropdownImages/FirstDrop/website-program.svg" alt="dropImg">
+                <div>
+                  <p class="text-[#334155] text-[16px]">Saytların hazırlanması</p>
+                  <span class="text-[#64748B] text-[14px]">Veb saytların hazırlanması</span>
+                </div>
+              </div>
+              <div class="flex justify-start items-center">
+                <img class="h-[52px] w-[52px] object-cover p-[12px] mr-[16px] bg-[#DBEAFE] rounded-[8px]"
+                  src="Images/DropdownImages/FirstDrop/website-program.svg" alt="dropImg">
+                <div>
+                  <p class="text-[#334155] text-[16px]">Saytların hazırlanması</p>
+                  <span class="text-[#64748B] text-[14px]">Veb saytların hazırlanması</span>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a class="hover:text-[#752EE2] relative cursor-pointer" onclick="HideShow('DomenDropItem')">
+            Domen
+            <i class="fa-solid fa-chevron-down text-[13px] ml-[10px]"></i>
+            <div id="DomenDropItem"
+              class="absolute hidden flex-col top-[45px] left-[-150px] w-[405px] max-h-[500px] overflow-auto gap-[24px] py-[24px] pl-[32px] pr-[16px] bg-white border rounded-[10px]">
+              <div class="flex justify-start items-center">
+                <img class="h-[52px] w-[52px] object-cover p-[12px] mr-[16px] bg-[#DBEAFE] rounded-[8px]"
+                  src="Images/DropdownImages/FirstDrop/website-program.svg" alt="dropImg">
+                <div>
+                  <p class="text-[#334155] text-[16px]">Saytların hazırlanması</p>
+                  <span class="text-[#64748B] text-[14px]">Veb saytların hazırlanması</span>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a class="hover:text-[#752EE2] relative cursor-pointer" onclick="HideShow('HostinqDropItem')">
+            Hostinq
+            <i class="fa-solid fa-chevron-down text-[13px] ml-[10px]"></i>
+            <div id="HostinqDropItem"
+              class="absolute hidden flex-col top-[45px] left-[-150px] w-[405px] max-h-[500px] overflow-auto gap-[24px] py-[24px] pl-[32px] pr-[16px] bg-white border rounded-[10px]">
+              <div class="flex justify-start items-center">
+                <img class="h-[52px] w-[52px] object-cover p-[12px] mr-[16px] bg-[#DBEAFE] rounded-[8px]"
+                  src="Images/DropdownImages/FirstDrop/website-program.svg" alt="dropImg">
+                <div>
+                  <p class="text-[#334155] text-[16px]">Saytların hazırlanması</p>
+                  <span class="text-[#64748B] text-[14px]">Veb saytların hazırlanması</span>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a class="hover:text-[#752EE2] relative cursor-pointer" onclick="HideShow('XidDropItem')">
+            Xidmətlər
+            <i class="fa-solid fa-chevron-down text-[13px] ml-[10px]"></i>
+            <div id="XidDropItem"
+              class="absolute hidden flex-col top-[45px] left-[-150px] w-[405px] max-h-[500px] overflow-auto gap-[24px] py-[24px] pl-[32px] pr-[16px] bg-white border rounded-[10px]">
+              <div class="flex justify-start items-center" onclick="window.location.href='calculator.html'">
+                <img class="h-[52px] w-[52px] object-cover p-[12px] mr-[16px] bg-[#DBEAFE] rounded-[8px]"
+                  src="Images/DropdownImages/FirstDrop/calculator.svg" alt="dropImg">
+                <div>
+                  <p class="text-[#334155] text-[16px]">Sayt Kalkulyatoru</p>
+                  <span class="text-[#64748B] text-[14px]">Saytın Qiymətini Öyrən</span>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a class="hover:text-[#752EE2] relative cursor-pointer" onclick="HideShow('CompDropItem')">
+            Şirkət
+            <i class="fa-solid fa-chevron-down text-[13px] ml-[10px]"></i>
+            <div id="CompDropItem"
+              class="absolute hidden flex-col top-[45px] left-[-150px] w-[405px] max-h-[500px] overflow-auto gap-[24px] py-[24px] pl-[32px] pr-[16px] bg-white border rounded-[10px]">
+              <div class="flex justify-start items-center">
+                <img class="h-[52px] w-[52px] object-cover p-[12px] mr-[16px] bg-[#DBEAFE] rounded-[8px]"
+                  src="Images/DropdownImages/FirstDrop/website-program.svg" alt="dropImg">
+                <div>
+                  <p class="text-[#334155] text-[16px]">Saytların hazırlanması</p>
+                  <span class="text-[#64748B] text-[14px]">Veb saytların hazırlanması</span>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="navRightPart w-fit flex items-center justify-between gap-[25px]">
+          <div class="currencyAndCountry flex items-center gap-[15px]">
+            <a href="#" class="text-[20px] font-bold flex items-center">
+              ₼
+              <i class="fa-solid fa-chevron-down text-[13px] ml-[15px]"></i>
+            </a>
+            <a href="#" class="flex items-center text-[20px]">
+              <img class="w-[24px] " src="Images/flag.png" alt="flagAzerbaijan">
+              <i class="fa-solid fa-chevron-down text-[13px] ml-[15px]"></i>
+            </a>
+          </div>
+          <div class="rightButtonsDiv flex items-center gap-[15px] hidden xl:flex">
+            <a class="px-[24px] py-[9px] border rounded-[10px] text-white bg-gradient-to-r from-[#742CE3] 
+            to-[#E1ADCB]" href="#">
+              Qiymət Təklifi Al
+            </a>
+            <button class="px-[24px] py-[9px] border rounded-[10px] text-[#A271F2] border-[#A271F2]">
+              Daxil olun
+            </button>
+          </div>
+          <i class="fa-solid fa-bars block xl:hidden text-[1.2rem]"></i>
+          <div class="hamburgerMenu hidden">
+          </div>
+        </div>
+      </nav>
+    </div>
+    <div class="headerMain h-[100vh] flex items-center justify-center gap-[30px] flex-col">
+      <h1 class="xl:w-[900px] mt-[60px] w-[95%] text-[2rem] md:text-[3rem] text-[#334155] font-[650] text-center">
+        Biznesinizi bizimlə rəqəmsal dünyada
+        <span class="relative inline-block text-blue-600">
+          daha asan
+          <img class="absolute top-0 left-0" src="Images/easier.svg" alt="Asan-image">
+        </span>
+        yoldan irəliyə apar!
+      </h1>
+      <p class="text-[20px] text-slate-500 xl:w-[660px] w-[85%] text-center">
+        Mütəxəssislərdən ibarət komandamız sizə müştəri dəstəyi və texniki yardım göstərmək üçün 24/7 hazırdır.
+      </p>
+      <a class="text-blue-600 font-[600] py-[18px] px-[28px] rounded-[10px] border-[3px] border-[#A271F2]" href="#">
+        Sayt Sifariş Et
+      </a>
+    </div>
+  </header>
+  <script src="hideorshowdrop.js"></script>
 </body>
 
 </html>
